--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/forms": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "~11.1.1",
+    "@angular/router": "^11.1.2",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
