--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.1",
-    "@angular/common": "~11.1.1",
+    "@angular/common": "^11.1.1",
     "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
+    "@angular/core": "^11.1.1",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.1.1",
-    "@angular/platform-browser": "~11.1.1",
+    "@angular/platform-browser": "^11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "^11.1.2",
+    "@angular/router": "^11.1.1",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
+    "@angular/cli": "^11.1.4",
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
